--- a/az104/data/page_69.html
+++ b/az104/data/page_69.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" type="text/css" href="default.css" />
 <link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" defhref="font-awesome.min.css" />
 <script>
@@ -77,7 +78,7 @@ function myFunction() {
 	</div>
 </div>
 </div>
-<hr /><table style="border-collapse: collapse; width: 100%;" border="0"><tbody><tr><td style="width: 30%;"><p style="text-align: left; margin-left: 29px;"><a href="/az104/data/page_68.html">Prv</a></p></td> <td style="width: 40%;"><p style="text-align: center; left;margin-right: 29px;"><a href="https://cloudtech.how/microsoft/exam-az-104-microsoft-azure-administrator/az-104-question-53" rel="noopener noreferrer" target="_blank">Referance Page</a></p></td><td style="width: 30%;"><p style="text-align: right; left;margin-right: 29px;"><a href="/az104/data/page_70.html">Next</a></p></td></tr></tbody></table><div class="question-body mt-3 pt-3 border-top" data-id="804321">
+<hr /><table style="border-collapse: collapse; width: 100%;" border="0"><tbody><tr><td style="width: 30%;"><p style="text-align: left; margin-left: 29px;"><a href="page_68.html">Prv</a></p></td> <td style="width: 40%;"><p style="text-align: center; left;margin-right: 29px;"><a href="https://cloudtech.how/microsoft/exam-az-104-microsoft-azure-administrator/az-104-question-53" rel="noopener noreferrer" target="_blank">Referance Page</a></p></td><td style="width: 30%;"><p style="text-align: right; left;margin-right: 29px;"><a href="page_70.html">Next</a></p></td></tr></tbody></table><div class="question-body mt-3 pt-3 border-top" data-id="804321">
 <p class="card-text">
 							
 								You have an Azure Active Directory (Azure AD) tenant named contoso.onmicrosoft.com.<br/>The User administrator role is assigned to a user named Admin1.<br/>An external partner has a Microsoft account that uses the <a class="__cf_email__" data-cfemail="b4c1c7d1c685f4dbc1c0d8dbdbdf9ad7dbd9" href="/cdn-cgi/l/email-protection">[email protected]</a> sign in.<br/>Admin1 attempts to invite the external partner to sign in to the Azure AD tenant and receives the following error message: `Unable to invite user <a class="__cf_email__" data-cfemail="f782849285c6b79882839b98989cd994989a" href="/cdn-cgi/l/email-protection">[email protected]</a> `" Generic authorization exception.`<br/>You need to ensure that Admin1 can invite the external partner to sign in to the Azure AD tenant.<br/>What should you do?<br/>
