--- a/az104/data/page_117.html
+++ b/az104/data/page_117.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" type="text/css" href="default.css" />
 <link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" defhref="font-awesome.min.css" />
 <script>
@@ -77,7 +78,7 @@ function myFunction() {
 	</div>
 </div>
 </div>
-<hr /><table style="border-collapse: collapse; width: 100%;" border="0"><tbody><tr><td style="width: 30%;"><p style="text-align: left; margin-left: 29px;"><a href="/az104/data/page_115.html">Prv</a></p></td> <td style="width: 40%;"></td><td style="width: 30%;"><p style="text-align: right; left;margin-right: 29px;"><a href="/az104/data/page_118.html">Next</a></p></td></tr></tbody></table><div class="question-body mt-3 pt-3 border-top" data-id="873910">
+<hr /><table style="border-collapse: collapse; width: 100%;" border="0"><tbody><tr><td style="width: 30%;"><p style="text-align: left; margin-left: 29px;"><a href="page_115.html">Prv</a></p></td> <td style="width: 40%;"></td><td style="width: 30%;"><p style="text-align: right; left;margin-right: 29px;"><a href="page_118.html">Next</a></p></td></tr></tbody></table><div class="question-body mt-3 pt-3 border-top" data-id="873910">
 <p class="card-text">
 							
 								HOTSPOT<br/> -<br/><br/>You have three Azure subscriptions named Sub1, Sub2, and Sub3 that are linked to an Azure AD tenant.<br/><br/>The tenant contains a user named User1, a security group named Group1, and a management group named MG1. User is a member of Group1.<br/><br/>Sub1 and Sub2 are members of MG1. Sub1 contains a resource group named RG1. RG1 contains five Azure functions.<br/><br/>You create the following role assignments for MG1:<br/><br/>•	Group1: Reader<br/>•	User1: User Access Administrator<br/><br/>You assign User the Virtual Machine Contributor role for Sub1 and Sub2.<br/><br/><img src="https://img.examtopics.com/az-104/image655.png"/>
