--- a/az104/data/page_109.html
+++ b/az104/data/page_109.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" type="text/css" href="default.css" />
 <link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" defhref="font-awesome.min.css" />
 <script>
@@ -77,7 +78,7 @@ function myFunction() {
 	</div>
 </div>
 </div>
-<hr /><table style="border-collapse: collapse; width: 100%;" border="0"><tbody><tr><td style="width: 30%;"><p style="text-align: left; margin-left: 29px;"><a href="/az104/data/page_108.html">Prv</a></p></td> <td style="width: 40%;"></td><td style="width: 30%;"><p style="text-align: right; left;margin-right: 29px;"><a href="/az104/data/page_110.html">Next</a></p></td></tr></tbody></table><div class="question-body mt-3 pt-3 border-top" data-id="860437">
+<hr /><table style="border-collapse: collapse; width: 100%;" border="0"><tbody><tr><td style="width: 30%;"><p style="text-align: left; margin-left: 29px;"><a href="page_108.html">Prv</a></p></td> <td style="width: 40%;"></td><td style="width: 30%;"><p style="text-align: right; left;margin-right: 29px;"><a href="page_110.html">Next</a></p></td></tr></tbody></table><div class="question-body mt-3 pt-3 border-top" data-id="860437">
 <p class="card-text">
 							
 								You have an Azure AD tenant named adatum.com that contains the groups shown in the following table.<br/><br/><img src="https://img.examtopics.com/az-104/image572.png"/><br/><br/>Adatum.com contains the users shown in the following table.<br/><br/><img src="https://img.examtopics.com/az-104/image573.png"/><br/><br/>You assign the Azure Active Directory Premium Plan 2 license to Group1 and User4.<br/><br/>Which users are assigned the Azure Active Directory Premium Plan 2 license?
