--- a/az104/data/page_110.html
+++ b/az104/data/page_110.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" type="text/css" href="default.css" />
 <link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" defhref="font-awesome.min.css" />
 <script>
@@ -77,7 +78,7 @@ function myFunction() {
 	</div>
 </div>
 </div>
-<hr /><table style="border-collapse: collapse; width: 100%;" border="0"><tbody><tr><td style="width: 30%;"><p style="text-align: left; margin-left: 29px;"><a href="/az104/data/page_109.html">Prv</a></p></td> <td style="width: 40%;"></td><td style="width: 30%;"><p style="text-align: right; left;margin-right: 29px;"><a href="/az104/data/page_112.html">Next</a></p></td></tr></tbody></table><div class="question-body mt-3 pt-3 border-top" data-id="860438">
+<hr /><table style="border-collapse: collapse; width: 100%;" border="0"><tbody><tr><td style="width: 30%;"><p style="text-align: left; margin-left: 29px;"><a href="page_109.html">Prv</a></p></td> <td style="width: 40%;"></td><td style="width: 30%;"><p style="text-align: right; left;margin-right: 29px;"><a href="page_112.html">Next</a></p></td></tr></tbody></table><div class="question-body mt-3 pt-3 border-top" data-id="860438">
 <p class="card-text">
 							
 								HOTSPOT<br/> -<br/><br/>You have an Azure AD tenant named contoso.com.<br/><br/>You have two external partner organizations named fabrikam.com and litwareinc.com. Fabrikam.com is configured as a connected organization.<br/><br/>You create an access package as shown in the Access package exhibit. (Click the Access package tab.)<br/><br/><img src="https://img.examtopics.com/az-104/image574.png"/><br/><br/>You configure the external user lifecycle settings as shown in the Lifecycle exhibit. (Click the Lifecycle tab.)<br/><br/><img src="https://img.examtopics.com/az-104/image575.png"/><br/><br/>For each of the following statements, select Yes if the statement is true. Otherwise, select No.<br/><br/>NOTE: Each correct selection is worth one point.<br/><br/><img src="https://img.examtopics.com/az-104/image576.png"/>
