--- a/az104/data/page_194.html
+++ b/az104/data/page_194.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" type="text/css" href="default.css" />
 <link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" defhref="font-awesome.min.css" />
 <script>
@@ -77,7 +78,7 @@ function myFunction() {
 	</div>
 </div>
 </div>
-<hr /><table style="border-collapse: collapse; width: 100%;" border="0"><tbody><tr><td style="width: 30%;"><p style="text-align: left; margin-left: 29px;"><a href="/az104/data/page_193.html">Prv</a></p></td> <td style="width: 40%;"></td><td style="width: 30%;"><p style="text-align: right; left;margin-right: 29px;"><a href="/az104/data/page_195.html">Next</a></p></td></tr></tbody></table><div class="question-body mt-3 pt-3 border-top" data-id="883090">
+<hr /><table style="border-collapse: collapse; width: 100%;" border="0"><tbody><tr><td style="width: 30%;"><p style="text-align: left; margin-left: 29px;"><a href="page_193.html">Prv</a></p></td> <td style="width: 40%;"></td><td style="width: 30%;"><p style="text-align: right; left;margin-right: 29px;"><a href="page_195.html">Next</a></p></td></tr></tbody></table><div class="question-body mt-3 pt-3 border-top" data-id="883090">
 <p class="card-text">
 							
 								HOTSPOT<br/> -<br/><br/>You have an Azure subscription that has offices in the East US and West US Azure regions.<br/><br/>You plan to create the storage account shown in the following exhibit.<br/><br/><img src="https://img.examtopics.com/az-104/image671.png"/><br/><br/>Use the drop-down menus to select the answer choice that completes each statement based on the information presented in the graphic.<br/><br/>NOTE: Each correct selection is worth one point.<br/><br/><img src="https://img.examtopics.com/az-104/image672.png"/>
